# SOC

./: CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
libint/: bindings.cpp  integrals_core.cpp  integrals_core.hpp
src/soc/: analysis.py  config.py  hamiltonian.py  parsers.py  soc_driver.py  utils.py
